contrast fix

--- a/scoots/css/styles.css
+++ b/scoots/css/styles.css
@@ -495,7 +495,7 @@ footer {
   margin-top: 25px; }
 
 .highlighted-text {
-  color: #ffd900; }
+  color: #ffe657; }
 
 .form {
   display: flex;
