--- a/scoots/scss/_small.scss
+++ b/scoots/scss/_small.scss
@@ -131,7 +131,7 @@ footer {
 }
 
 .highlighted-text {
-    color: rgb(255, 217, 0);
+    color: rgb(255, 230, 87);
 }
 
 .form {
